--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@
 </section>
 	<section class="terms">
 		<div>
-			<a href="pages/termsandservice.html" class="hero-btn">Terms and Condition</a>
+			<a href="../pages/termsandservice.html" class="hero-btn">Terms and Condition</a>
 		</div>
 	</section>
 	<!-----JavaScript------>
