--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,7 +44,7 @@
 	</section>
 	<section class="terms">
 		<div>
-			<a href="pages/termsandservice.html" class="hero-btn">Terms and Conditon</a>
+			<a href="../pages/termsandservice.html" class="hero-btn">Terms and Conditon</a>
 		</div>
 	</section>
 	<!-----JavaScript------>
