--- a/pages/address.html
+++ b/pages/address.html
@@ -38,7 +38,7 @@
 	</section>
 	<section class="terms">
 		<div>
-			<a href="pages/termsandservice.html" class="hero-btn">Terms and Condition</a>
+			<a href="../pages/termsandservice.html" class="hero-btn">Terms and Condition</a>
 		</div>
 	</section>
 	<!-----JavaScript------>
